Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1214060: activity log not working properly with user access control
 - Added patch 1237485: FCKEditor for editing HTML event descriptions
 - Fixed bug: view_entry.php was displaying '&amp' instead of '&amp;'
 - Fixed bug 1254983: nulogin.php throws language errors
 - Added install/index and classes/*.class files to update_translation.pl files list
 - Moved translation related functions to translate.php
 - Added 'Timezone Notice' if Assistant and Boss are in defferent timezones
 - Fixed bug 1249012: can't change timed to untimed events
 - Fixed bug 1233798: Catagory settings don't work quite right for Boss/Assistant
 - Fixed security: exploit allows execution of code downloaded from
   remote server
 - Fixed bug 1250870: repeatly entries for NUCs cannot be deleted correctly
 - Rename Event and RptEvent methods to conform to naming guidelines
 - Updated installer & added installer images
 - Updated views to tabbed GUI
 - Adjust sending time in send_reminder.php to Server Time vs GMT
 - Fixed bug 1204920: Default language is not set correctly to new users
 - Added end time calculation functions to Event.class
 - Fixed bug 1245228: Error in db_load_admin() cannot open table
 - Fixed bug 1245112: Entry will not be displayed properly for "public access"
 - Fixed bug 1238066: Site Extras in popup problem v1.1.0-CVS
 - Added circle.gif in week view to untimed or all day events
 - Fixed bug 1244652: nonuser admins can't set prefs & assistants
 - Fixed bug  1242309: New created user cannot be deleted
 - Fixed bug  1232617: Views cannot be deleted
 - Fixed bug 1242843: prefered view will not be properly displayed after Log in
 - Implemented RFE 1095248: Error check weekly repeating events
 - Fixed small bug if using 59 minutes for event time.
 - FIxed bug 1225818: Invalid login adds entry to webcal_user_pref
 - Implemented PATCH [ 587965 ] Entry &quot;use end date&quot; auto-selection